fix QQuickWidget memory corruption in setSource

If the root object of the Qml document is unknown to QQuickWidget,
it produces a segmentation fault, since obj is deleted once in
the setRootObject method, and once when its unique_ptr goes out of
scope.

Fixes: QTBUG-133832
Change-Id: I828616b390348762b144f81ed43e1883ecf38584
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>